--- a/text-to-speech.html
+++ b/text-to-speech.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text to Speech</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="speehBridge.png" type="image/x-icon">
 </head>
 <body>
     <div class="app-container">
